# kruxiaflow-python

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: concurrency-parallelism-analysis.md  custom-workers.md  quickstart.md  script-function-syntax.md  standard-workers.md  workflow-definitions.md
examples/: 01_weather_report.py  02_user_validation.py  03_document_processing.py  04_moderate_content.py  05_research_assistant.py  11_github_health_check.py  11_github_health_check.yaml  12_sales_etl_pipeline.py  12_sales_etl_pipeline.yaml  13_customer_churn_prediction.py  13_customer_churn_prediction.yaml  14_document_intelligence.py  14_document_intelligence.yaml  15_content_moderation_system.py  15_content_moderation_system.yaml  custom_worker.py
kruxiaflow/: __init__.py  client.py  expressions.py  models.py  types.py
kruxiaflow/worker/: __init__.py  activity.py  client.py  config.py  context.py  errors.py  file_executor.py  manager.py  poller.py  registry.py
kruxiaflow/worker/storage/: __init__.py  errors.py  models.py
kruxiaflow/workers/: __init__.py  __main__.py  script_activity.py
tests/: __init__.py  test_client.py  test_expressions.py  test_models.py  test_multiline_strings.py  test_yaml_serialization.py
tests/worker/: __init__.py  test_activity.py  test_client.py  test_config.py  test_context.py  test_file_executor.py  test_manager.py  test_poller.py  test_registry.py  test_storage.py
tests/workers/: test_main.py  test_script_activity.py
